# MalaysianOSINT

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Readme.md  SECURITY.md  codestats.sh  makefile  my_osint.c
assets/: class.puml  flow.puml  sequence.puml
include/: company.h  ecourt.h  memory.h  mykad.h  pdrm.h  rmp_wanted.h  social.h  sprm.h  ssm.h  sspi.h
public/: myosint.html
src/: company.c  ecourt.c  mykad.c  pdrm.c  rmp_wanted.c  social.c  sprm.c  ssm.c  sspi.c
test/: test_osint.c
